@@ -241,6 +241,19 @@
         </div>
     </section>
 
+    <section class="contact">
+        <div class="container">
+            <div class="contact-top">
+                <p>Contact Me</p>
+                <h2>Got a project? let's talk </h2>
+                <div class="email">
+                    <img src="img/icons/contact-mail.svg" alt="">
+                    <p>anasalwaleed77@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/app.js"></script>
 </body>
 
