@@ -4,3 +4,4 @@
 @import "portfolio";
 @import "about";
 @import "clients";
+@import "contact";
